fix(css): sticky header and relevant dark mode

--- a/assets/css/_common/_core/layout.scss
+++ b/assets/css/_common/_core/layout.scss
@@ -1,26 +1,39 @@
   /** Layout **/
-  
+
   .wrapper {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
   }
-  
+
   .navbar {
-    height: 4rem;
-    line-height: 4rem;
+    height: 3rem;
+    line-height: 3rem;
     width: 100%;
+    border-bottom: 1px solid $light-border-color;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: $light-background-color;
+    z-index: 1;
+
     .container {
       width: auto;
       max-width: 1200px;
       text-align: center;
       margin: 0 auto;
       display: flex;
-      justify-content: space-between; 
+      justify-content: space-between;
     }
+
+    .dark-theme & {
+        background-color: $dark-background-color;
+        border-bottom: 1px solid $dark-border-color;
+    }
+
   }
-  
+
   .main {
     flex: 1 0 auto;
   }
@@ -28,7 +41,7 @@
     padding-left: 1em;
     padding-right: 1em;
   }
-  
+
   .footer {
     height: 4rem;
     width: 100%;
@@ -36,8 +49,8 @@
     line-height: 4rem;
     padding-top: 2em;
   }
-  
-  
+
+
   .notfound {
     font-size: 2em;
     transform: translateY(35vh);
