--- a/assets/css/_common/_page/post.scss
+++ b/assets/css/_common/_page/post.scss
@@ -12,7 +12,7 @@
     overflow: auto;
     position: -webkit-sticky;
     position: sticky;
-    top: 5%;
+    top: 8%;
 }
 
 .right-sidebar {
@@ -22,7 +22,7 @@
     overflow: auto;
     position: -webkit-sticky;
     position: sticky;
-    top: 5%;
+    top: 8%;
 }
 
 #TableOfContents {
